[gd_scene load_steps=46 format=3 uid="uid://bi0ips52pne77"]

[ext_resource type="Script" uid="uid://cb26vfqqt682f" path="res://scripts/main_menu.gd" id="1_l6bqr"]
[ext_resource type="Texture2D" uid="uid://pc77vjflsl7d" path="res://assets/images/menu_background.png" id="2_yveur"]
[ext_resource type="Texture2D" uid="uid://dnj4v8muctgqx" path="res://assets/images/main_menu/menu.png" id="3_0vlpf"]
[ext_resource type="Texture2D" uid="uid://b8ln8n1m1goro" path="res://assets/images/death.png" id="3_mqh8r"]
[ext_resource type="Texture2D" uid="uid://cqb2ar3a2cqff" path="res://assets/images/main_menu/button_load_1.png" id="4_as5up"]
[ext_resource type="Texture2D" uid="uid://dgmuuvpq5mrv5" path="res://assets/images/main_menu/button_new_game_1.png" id="4_s0esx"]
[ext_resource type="Texture2D" uid="uid://ckd3ckuiugrqw" path="res://assets/images/main_menu/button_devblog_1.png" id="6_auncs"]
[ext_resource type="Texture2D" uid="uid://knx78ujav2fl" path="res://assets/images/main_menu/button_patreon_1.png" id="7_4084x"]
[ext_resource type="Texture2D" uid="uid://wybb6g24eboq" path="res://assets/images/mm_load/main_menu_load.png" id="8_8ui5f"]
[ext_resource type="Texture2D" uid="uid://ql8ghwxj0cuw" path="res://assets/images/mm_load/save_menu_button_back.png" id="9_1qb6e"]
[ext_resource type="Texture2D" uid="uid://c0odqau6ymjl7" path="res://assets/images/mm_load/save_menu_button_load.png" id="9_nvx11"]
[ext_resource type="Texture2D" uid="uid://ddxfkmgdfkg4u" path="res://assets/images/mm_load/save_menu_button_delete.png" id="10_as1lp"]
[ext_resource type="Script" uid="uid://dp6cmyn7ilaiq" path="res://scripts/ChoicesDialog.gd" id="12_gydw4"]

[sub_resource type="SystemFont" id="SystemFont_sj7uo"]
font_names = PackedStringArray("Verdana")
font_weight = 999

[sub_resource type="LabelSettings" id="LabelSettings_x2swp"]
line_spacing = 1.0
font = SubResource("SystemFont_sj7uo")
font_size = 22
font_color = Color(1, 0.00392157, 0.00392157, 1)

[sub_resource type="SystemFont" id="SystemFont_o8nyb"]
font_names = PackedStringArray("Verdana")
font_weight = 999

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgclj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.00392157, 0.00392157, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vv75k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ecq6s"]
texture = ExtResource("4_s0esx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vp3wg"]
texture = ExtResource("4_as5up")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0k2ar"]
texture = ExtResource("6_auncs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d4v3c"]
texture = ExtResource("7_4084x")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqaw2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6t2wy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yn4gx"]
texture = ExtResource("9_nvx11")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ue6s2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6ggv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eiwp0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vt8bh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5eiij"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5genb"]
texture = ExtResource("10_as1lp")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j43s5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ubtbi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mohq8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cn56t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vv6wq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f1ejh"]
texture = ExtResource("9_1qb6e")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glqid"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aed6d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1xvs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nyvu0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0apf6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18fv0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qhaq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pwhl"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_l6bqr")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_yveur")

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_mqh8r")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 330.0
offset_top = 267.0
offset_right = 910.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.00392157, 0.00392157, 1)
theme_override_font_sizes/font_size = 24
text = "WARNING:
This game contains themes and content inappropriate for underage viewers. Including but not limited to: Graphic sex, gore and xenophilia."
label_settings = SubResource("LabelSettings_x2swp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 446.0
offset_top = 430.0
offset_right = 794.0
offset_bottom = 469.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.00392157, 0.00392157, 1)
theme_override_fonts/font = SubResource("SystemFont_o8nyb")
theme_override_styles/normal = SubResource("StyleBoxFlat_rgclj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rgclj")
theme_override_styles/hover = SubResource("StyleBoxFlat_rgclj")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_rgclj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rgclj")
theme_override_styles/focus = SubResource("StyleBoxFlat_rgclj")
text = "I am of legal age and wish to proceed"

[node name="Control2" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_0vlpf")

[node name="Label" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 822.0
offset_top = 25.0
offset_right = 854.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 580.0
offset_top = 286.0
offset_right = 700.0
offset_bottom = 316.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/hover = SubResource("StyleBoxTexture_ecq6s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vv75k")
icon_alignment = 1

[node name="Button2" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 609.0
offset_top = 372.0
offset_right = 671.0
offset_bottom = 402.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp3wg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vv75k")
icon_alignment = 1

[node name="Button3" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 591.0
offset_top = 538.0
offset_right = 689.0
offset_bottom = 568.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/hover = SubResource("StyleBoxTexture_0k2ar")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vv75k")
icon_alignment = 1

[node name="Button4" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 591.0
offset_top = 580.0
offset_right = 689.0
offset_bottom = 610.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/hover = SubResource("StyleBoxTexture_d4v3c")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vv75k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vv75k")
icon_alignment = 1

[node name="Control3" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control3"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_8ui5f")

[node name="Button" type="Button" parent="Control3"]
layout_mode = 0
offset_left = 485.0
offset_top = 119.0
offset_right = 580.0
offset_bottom = 148.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_eqaw2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6t2wy")
theme_override_styles/hover = SubResource("StyleBoxTexture_yn4gx")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ue6s2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l6ggv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eiwp0")

[node name="Button2" type="Button" parent="Control3"]
layout_mode = 0
offset_left = 826.0
offset_top = 123.0
offset_right = 897.0
offset_bottom = 144.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_vt8bh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5eiij")
theme_override_styles/hover = SubResource("StyleBoxTexture_5genb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_j43s5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ubtbi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mohq8")

[node name="Button3" type="Button" parent="Control3"]
layout_mode = 0
offset_left = 485.0
offset_top = 383.0
offset_right = 580.0
offset_bottom = 412.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cn56t")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vv6wq")
theme_override_styles/hover = SubResource("StyleBoxTexture_f1ejh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_glqid")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aed6d")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u1xvs")

[node name="Label" type="Label" parent="Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 637.0
offset_top = 121.0
offset_right = 803.0
offset_bottom = 144.0

[node name="PanelContainer" type="PanelContainer" parent="Control3"]
visible = false
visibility_layer = 2
layout_mode = 0
offset_left = 621.0
offset_top = 160.0
offset_right = 812.0
offset_bottom = 605.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_nyvu0")
script = ExtResource("12_gydw4")

[node name="MarginContainer" type="MarginContainer" parent="Control3/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control3/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control3/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Button" type="Button" parent="Control3/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_0apf6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_18fv0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6qhaq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5pwhl")
text = "Choice"
alignment = 0

[connection signal="pressed" from="Control/Button" to="." method="_on_button_warning_pressed"]
[connection signal="pressed" from="Control2/Button" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="Control2/Button2" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="Control2/Button3" to="." method="_on_button_devblog_pressed"]
[connection signal="pressed" from="Control2/Button4" to="." method="_on_button_patreon_pressed"]
[connection signal="pressed" from="Control3/Button" to="." method="_on_button_mm_load_pressed"]
[connection signal="pressed" from="Control3/Button2" to="." method="_on_button_mm_delete_pressed"]
[connection signal="pressed" from="Control3/Button3" to="." method="_on_button_mm_back_pressed"]
[connection signal="SELECTED" from="Control3/PanelContainer" to="." method="_on_panel_container_selected"]
